--- a/src/components copy/Dashboard/Main/TiempoDiario/styleDiario.css
+++ b/src/components copy/Dashboard/Main/TiempoDiario/styleDiario.css
@@ -1,9 +1,11 @@
 
-.stats-info {
-    border-radius: 15px !important;
-    text-align: center;
-    background-color: #06e7c9 !important;
-    
-  
-  }
+.design {
+  border-radius: 15px !important;
+  text-align: center;
+  background-color: #06e7c9 !important;
+  position: relative; 
+  top: 20px; 
+  bottom: 20px;
+}
+
   
