--- a/src/components copy/Dashboard/Main/TiempoTotal/Stats.css
+++ b/src/components copy/Dashboard/Main/TiempoTotal/Stats.css
@@ -2,7 +2,7 @@
 .stats-info {
   border-radius: 15px !important;
   text-align: center;
-  background-color: #dc3545 !important;
+  background-color: #df1327 !important;
   
 
 }
