--- a/src/components copy/Dashboard/Main/InformeDeTiempo/TiempoTotal/Stats.css
+++ b/src/components copy/Dashboard/Main/InformeDeTiempo/TiempoTotal/Stats.css
@@ -1,8 +1,7 @@
-
-.stats-info {
-  border-radius: 15px !important;
-  text-align: center;
-  background-color: #df1327 !important;
-  
-
+/* styleTotal.css */
+.desing {
+  display: block; /* Asegúrate de que el contenedor sea visible */
+  text-align: center; /* Centra el texto */
+  color: black; /* Asegúrate de que el color del texto sea visible */
+  background-color: white;
 }
